fix: Java 11 호환 및 개발자 공모전 필터 추가